--- a/hm_wrf_tbradar_demo/config_wrf_mcs_tbradar_seq.yml
+++ b/hm_wrf_tbradar_demo/config_wrf_mcs_tbradar_seq.yml
@@ -3,7 +3,7 @@
 # Tracking uses collocated Tb + Radar3D
 
 # Processing steps:
-run_preprocess: True
+run_preprocess: False
 run_idfeature : True
 run_tracksingle : True
 run_gettracks : True # not needed
@@ -16,8 +16,8 @@ run_speed : True # needed
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 1
-nprocesses : 8  # Number of processors to use if run_parallel=1
+run_parallel: 0
+nprocesses : 1  # Number of processors to use if run_parallel=1
 # dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 dask_tmp_dir: '/scratch/tang584'  # Dask temporary directory if run_parallel=1
 timeout: 360  # 360 [seconds] Dask timeout limit
